package com.example.foodcart.ingredients;

import android.content.Context;
import android.util.Log;
import android.view.LayoutInflater;
import android.view.View;
import android.view.ViewGroup;
import android.widget.ArrayAdapter;
import android.widget.ImageButton;
import android.widget.TextView;

import androidx.annotation.NonNull;
import androidx.annotation.Nullable;

import com.example.foodcart.ingredients.Ingredient;
import com.example.foodcart.R;
import com.google.android.gms.tasks.OnFailureListener;
import com.google.android.gms.tasks.OnSuccessListener;
import com.google.firebase.firestore.CollectionReference;
import com.google.firebase.firestore.FirebaseFirestore;

import java.util.ArrayList;


public class CustomIngredientArrayAdapter extends ArrayAdapter<Ingredient> {
    private ArrayList<Ingredient> ingredients;
    private Context context;
    private FirebaseFirestore db;

    public CustomIngredientArrayAdapter(Context context, ArrayList<Ingredient> ingredients) {
        super(context, 0, ingredients);
        this.ingredients = ingredients;
        this.context = context;
    }

    @NonNull
    @Override
    public View getView(int position, @Nullable View convertView, @NonNull ViewGroup parent) {
        // return super.getView(position, convertView, parent);
        View view = convertView;
        if (view == null) {
            view = LayoutInflater.from(context).inflate(R.layout.content_ingredients_item, parent, false);
        }

        com.example.foodcart.ingredients.Ingredient ingredient = ingredients.get(position);

        TextView ingredientDescription = view.findViewById(R.id.ingredient_item_name);
        TextView ingredientQuantity = view.findViewById(R.id.ingredient_item_quantity);
        TextView ingredientSort = view.findViewById(R.id.ingredient_item_sort);

        ingredientDescription.setText(ingredient.getDescription());
        ingredientQuantity.setText(ingredient.getCount().toString());
        ingredientSort.setText("Sort value");


        // set up delete button on each list item and onClick
        ImageButton deleteButton = (ImageButton) view.findViewById(R.id.ingredient_item_deleteButton);
        deleteButton.setFocusable(false);
        deleteButton.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                if (ingredients.size() > 0) {
                    // find and remove selection
                    ingredients.remove(Math.min(position, ingredients.size() - 1));
                    // Access a Cloud Firestore instance from your Activity
                    db = FirebaseFirestore.getInstance();
                    // Get a top level reference to the collection
                    final CollectionReference IngredientCollection = db.collection("Ingredients");
                    IngredientCollection
                            .document(ingredients.get(position).getDescription())
                            .delete()
                            .addOnSuccessListener(new OnSuccessListener<Void>() {
                                @Override
                                public void onSuccess(Void aVoid) {
                                    // These are a method which gets executed when the task is succeeded
                                    Log.d("Sample", "Data has been deleted successfully!");
                                }
                            })
                            .addOnFailureListener(new OnFailureListener() {
                                @Override
                                public void onFailure(@NonNull Exception e) {
                                    // These are a method which gets executed if there’s any problem
                                    Log.d("Sample", "Data could not be deleted!" + e.toString());
                                }
                            });
                    notifyDataSetChanged();
                }
            }
        });

        return view;
    }


}
